# zephyr_multi_image

./: CMakeLists.txt  Kconfig  dummy.conf  zephyr.cmake
cmake/: extensions.cmake
